--- a/config/autoload.ini
+++ b/config/autoload.ini
@@ -2,6 +2,8 @@
 ; List modules which are required to be loaded beforehand
 ;;
 requires[] = "core"
+requires[] = "haste"
+
 
 ;;
 ; Configure what you want the autoload creator to register
