--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require":{
     "php":">=5.3.2",
     "contao/core":">=3.4,<=3.5",
-    "contao-community-alliance/composer-plugin":"2.*"
+    "contao-community-alliance/composer-plugin":"2.*",
+    "codefog/contao-haste": "~4.3"
   },
   "extra":{
     "contao": {
