--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require":{
     "php":">=5.3.2",
-    "contao/core":">=3.4,<=3.5",
+    "contao/core":"^3.4",
     "contao-community-alliance/composer-plugin":"2.*",
     "codefog/contao-haste": "~4.3"
   },
