Use the Symfony VarDumper component for a nicer debug output

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "php": "^7.1",
     "contao/core-bundle": "~4.4",
     "contao-community-alliance/composer-plugin": "~2.4 || ~3.0",
-    "codefog/contao-haste": "~4.18"
+    "codefog/contao-haste": "~4.18",
+    "symfony/var-dumper": "^3.4 || ^4.4 || ^5.0"
   },
   "extra": {
     "contao": {
