--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "contao/core-bundle": "^4.9",
     "contao-community-alliance/composer-plugin": "^2.4 || ^3.0",
     "codefog/contao-haste": "^4.18",
-    "symfony/var-dumper": "^3.4 || ^4.4 || ^5.0"
+    "symfony/var-dumper": "^4.4 || ^5.0",
+    "symfony/property-access": "^4.4 || ^5.0"
   },
   "autoload": {
     "files": [
