Split session handling into separate class

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
       "FormMPFormPlaceholder.php",
       "MPForms.php",
       "MPFormsFormManager.php",
+      "MPFormsSessionManager.php",
       "MPFormsStepsModule.php"
     ]
   },
