--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-# OS
-.DS_Store
-Thumbs.db
-
-# IDEs
-.buildpath
-.project
-.settings/
-.build/
-.idea/
-nbproject/
-
-# Composer
-vendor/
-composer.lock
+/vendor/
+/tools/*/vendor
+/composer.lock
+/.php-cs-fixer.cache
+/tools/phpunit/.phpunit.result.cache
