Refactored completely again to allow for even more flexibility and testability

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
     }
   },
   "require-dev": {
-    "contao/manager-plugin": "^2.12"
+    "contao/manager-plugin": "^2.12",
+    "contao/test-case": "^5.0"
   }
 }
