Fixed file uploads for real now

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "php": "^8.1",
     "contao/core-bundle": "^4.13 || ^5.0",
     "codefog/contao-haste": "^5.0",
+    "symfony/filesystem": "^5.4 || ^6.0",
     "symfony/var-dumper": "^5.4 || ^6.0"
   },
   "autoload": {
